adicionando filtro por nome e email na consulta de funcionarios
